# FMU_Gateway

./: .dockerignore  .env.example  .gitignore  AI_AGENT_GUIDE.md  BouncingBall.fmu  COINBASE_SETUP.md  CONTRIBUTING.md  CRYPTO_MARKETING.md  CRYPTO_PAYMENT_SUMMARY.md  DEPLOYMENT_FIX_GUIDE.md  Dockerfile  FINAL_STATUS.md  FMU_GATEWAY_IMPROVEMENT_PROMPT.txt  FMU_Gateway_Certified_Registry.md  FMU_Gateway_Commercial_Architecture.md  FMU_Gateway_Payments_and_Access.md  FMU_Gateway_Scaffold.md  FMU_Gateway_Web_Dashboard.md  IMPLEMENTATION_COMPLETE.md  IMPROVEMENTS_SUMMARY.md  LAUNCH_CHECKLIST.md  LAUNCH_SUMMARY.md  LICENSE  LOCAL_SETUP.md  MANUAL_TEST_STEPS.md  Makefile  PHASE1_REVIEW_REPORT.md  PROMPT.txt  README.md  REVIEW_SUMMARY.md  STRIPE_WEBHOOK_SETUP.md  TEST_CREDENTIALS.md  THIRD_PARTY_NOTICES.md  agent_policy.md  client.py  crypto_pay_request.json  example_simulation_config.json  final_test.txt  fly.toml  fmu_compiler.py  (+22 more)
app/: __init__.py  db.py  flexible_simulation.py  kpi.py  library.py  logging_utils.py  main.py  schemas.py  security.py  simulate.py  storage.py  validation.py
dashboard/: package-lock.json  package.json
deploy/: aws_ecs_config.json  docker-compose.yml  vercel_config.json
docs/: architecture.md  design_document_template.md  landing_page.md  launch_posts.md  library_management.md  monetization.md  monetization_plan.md  push_workflow.md  sdk_usage.md
open-sdk/: Dockerfile  README.md  setup.py
private-api/: .env.example  Dockerfile  (+2 more)
sdk/python/: README.md  pyproject.toml
sdk/python/fmu_gateway_sdk/: __init__.py  client.py  enhanced_client.py
(+127 files in other folders)
