[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fmu-gateway-sdk"
version = "0.1.0"
description = "Python SDK for FMU Gateway API"
dependencies = [
    "requests>=2.31.0",
    "pydantic>=2.9.2"
]

[project.urls]
Homepage = "https://github.com/user/fmu-gateway"
